# nrf52840-lights

./: .gitignore  CMakeLists.txt  HANDOVER_NOTES.md  Kconfig  README.md  prj.conf
boards/: nice_nano_nrf52840.overlay
boards/nicekeyboards/nice_nano/: Kconfig  Kconfig.defconfig  board.cmake  board.yml  nice_nano_nrf52840-pinctrl.dtsi  nice_nano_nrf52840.dts  nice_nano_nrf52840.yaml  nice_nano_nrf52840_defconfig
scripts/: setup.sh
src/: ble_service.c  ble_service.h  led_effects.c  led_effects.h  main.c
